--- a/default.conf
+++ b/default.conf
@@ -24,13 +24,14 @@ server {
         root /var/www/html;
 
         # Add index.php to the list if you are using PHP
-        index index.html index.htm index.nginx-debian.html;
+        #index index.html index.htm index.nginx-debian.html;
 
         server_name _;
 
         location $prefix/ {
                 # First attempt to serve request as file, then
                 # as directory, then fall back to displaying a 404.
+                index index.html;
                 try_files $uri $uri/ =404;
         }
 
